<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_introspection</name>
  <version>0.0.0</version>
  <description>Extract information from a ROS2 message at run-time</description>
  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rcpputils</depend>
    <depend>rosbag2</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rmw_fastrtps_cpp</depend>
    <depend>rclcpp</depend>
    <depend>boost</depend>
    <depend>gtest</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
